--- a/TPGR.css
+++ b/TPGR.css
@@ -841,7 +841,7 @@
         margin: 0px;
     }
     #app-mount .typeWindows__5fa63:after {
-        content: "PGR";
+        content: "Punishing: Gray Raven";
         color: rgb(255,255,255,0.5);
         font-weight: 500;
 
