--- a/TPGR.css
+++ b/TPGR.css
@@ -1,5 +1,5 @@
 :root{
-     --background: url('https://images.alphacoders.com/632/632525.png');
+     --background: url('ihttps://r4.wallpaperflare.com/wallpaper/589/95/715/seymour-science-fiction-anime-girls-motobike-punishing-gray-raven-hd-wallpaper-06bb99f881bf488806699d668eade5ac.jpg');
      --activetext-colour: white;
  
      --primary1-colour: red;
